--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -182,8 +182,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.PAT }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./windows-ci-build/*.msix
-          asset_name: windows-ci-build.msix
+          asset_path: ./windows-ci-build.zip
+          asset_name: windows-ci-build.zip
           asset_content_type: application/vnd.ms-package
 
   release-android:
@@ -215,6 +215,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.PAT }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./android-ci-build/*Signed.apk
-          asset_name: android-ci-build.apk
+          asset_path: ./android-ci-build.zip
+          asset_name: android-ci-build.zip
           asset_content_type: application/vnd.android.package-archive
