--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -182,9 +182,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.PAT }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./windows-ci-build.zip
-          asset_name: windows-ci-build.zip
-          asset_content_type: application/vnd.ms-package
+          asset_path: ./windows-ci-build
+          asset_name: windows-ci-build
+          asset_content_type: application/zip
 
   release-android:
     name: Release Android
@@ -215,6 +215,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.PAT }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./android-ci-build.zip
-          asset_name: android-ci-build.zip
-          asset_content_type: application/vnd.android.package-archive
+          asset_path: ./android-ci-build
+          asset_name: android-ci-build
+          asset_content_type: application/zip
