chore: started working on vault creation logic, need to tweak standard encryption graph to take vault as input

--- a/devoctomy.Passchamp.Core.UnitTests/devoctomy.Passchamp.Core.UnitTests.csproj
+++ b/devoctomy.Passchamp.Core.UnitTests/devoctomy.Passchamp.Core.UnitTests.csproj
@@ -14,6 +14,7 @@
     <None Remove="Data\pins1.json" />
     <None Remove="Data\TestInputFile1.txt" />
     <None Remove="Data\TestOutputFile1.txt" />
+    <None Remove="Data\VaultSerialiserNodeExpected.json" />
     <None Remove="Data\WordLists\colours.txt" />
     <None Remove="Data\WordLists\fruits.txt" />
     <None Remove="Output\DontDeleteMe.txt" />
@@ -39,6 +40,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\TestOutputFile1.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\VaultSerialiserNodeExpected.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\WordLists\colours.txt">
