--- a/devoctomy.Passchamp.Client/devoctomy.Passchamp.Client.csproj
+++ b/devoctomy.Passchamp.Client/devoctomy.Passchamp.Client.csproj
@@ -60,27 +60,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Compile Update="Pages\AppShellPage.xaml.cs">
-	    <DependentUpon>AppShellPage.xaml</DependentUpon>
-	  </Compile>
-	  <Compile Update="Pages\EnterMasterPassphrasePage.xaml.cs">
-	    <DependentUpon>EnterMasterPassphrasePage.xaml</DependentUpon>
-	  </Compile>
-	  <Compile Update="Pages\SettingsPage.xaml.cs">
-	    <DependentUpon>SettingsPage.xaml</DependentUpon>
-	  </Compile>
-	  <Compile Update="Pages\VaultEditorPage.xaml.cs">
-	    <DependentUpon>VaultEditorPage.xaml</DependentUpon>
-	  </Compile>
-	  <Compile Update="Pages\VaultsPage.xaml.cs">
-	    <DependentUpon>VaultsPage.xaml</DependentUpon>
-	  </Compile>
-	  <Compile Update="Views\CloudSettingsView.xaml.cs">
-	    <DependentUpon>CloudSettingsView.xaml</DependentUpon>
-	  </Compile>
-	</ItemGroup>
-
-	<ItemGroup>
 	  <MauiXaml Update="Controls\TabView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
@@ -103,6 +82,9 @@
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Pages\SettingsPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\VaultPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\VaultSecurityView.xaml">
